Resolves tdf#137298 - Show document info for respective fields

Change-Id: I3e410fe88a6402684153d1e1d1d074c2fe65dee9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173613
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>